--- a/css/estilos.css
+++ b/css/estilos.css
@@ -281,6 +281,11 @@ h1{
         overflow-x: hidden;
     }
 
+    .section__banner{
+        width: 350px;
+    }
+
+
     .section__divparrafo {
         text-align: center;
         margin-top: unset;
