Media query 1024px

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -53,6 +53,7 @@
     object-fit: cover;
 }
 
+
 .footer{
     background-color: #dbc7db96;
     display: flex;
@@ -85,15 +86,18 @@
     object-fit: cover;
 }
 
-.main{
-    display: flex;
+.main {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-gap: 2px;
 }
 
-.main__div{
-    padding-top: 4rem;
-    padding-bottom: 2rem;
+.main__div {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     margin: auto;
 }
+
 .main__anchorimg{
     width: 10rem;
 }
@@ -104,21 +108,23 @@
 }
 
 .section{
-    display: flex;
-    width: auto;
+    display: grid;
+    /* width: auto;
     height: auto;
     align-items: center;
-    padding-bottom: 1rem;
+    padding-bottom: 1rem; */
+    grid-template-columns: 60% 40%;
+
 }
 
 .section__video{
-    width: 50%;
+    width: 90%;
     margin-left: 1rem;
+    margin-top: 1rem;
 }
 
 .section__div{
-    width: 50%;
-    padding: 1rem 2rem 2rem 2rem;
+    padding: 1rem 1rem 1rem 1rem;
 }
 
 h1{
@@ -127,11 +133,9 @@ h1{
 
 }
 
-
 .section__divparrafo{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: small;
-
+    font-size: medium;
     margin-top: 1rem;
     margin-bottom: 2rem;
 
