--- a/css/estilos.css
+++ b/css/estilos.css
@@ -53,7 +53,6 @@
     object-fit: cover;
 }
 
-
 .footer{
     background-color: #dbc7db96;
     display: flex;
@@ -86,19 +85,17 @@
     object-fit: cover;
 }
 
-.main {
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-gap: 2px;
+.main{
+    display: flex;
 }
 
-.main__div {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+.main__div{
+    padding-top: 4rem;
+    padding-bottom: 2rem;
     margin: auto;
 }
-
 .main__anchorimg{
+
     width: 10rem;
 }
 
@@ -108,23 +105,21 @@
 }
 
 .section{
-    display: grid;
-    /* width: auto;
+    display: flex;
+    width: auto;
     height: auto;
     align-items: center;
-    padding-bottom: 1rem; */
-    grid-template-columns: 60% 40%;
-
+    padding-bottom: 1rem;
 }
 
 .section__video{
-    width: 90%;
+    width: 50%;
     margin-left: 1rem;
-    margin-top: 1rem;
 }
 
 .section__div{
-    padding: 1rem 1rem 1rem 1rem;
+    width: 50%;
+    padding: 1rem 2rem 2rem 2rem;
 }
 
 h1{
@@ -135,16 +130,32 @@ h1{
 
 .section__divparrafo{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: medium;
+    font-size: small;
+
     margin-top: 1rem;
     margin-bottom: 2rem;
-
 }
 
 /* MEDIA QUERIES ESTILO LAPTOP*/
-
 @media screen and (max-width: 1024px){
 
+    .section {
+        flex-direction: column;
+        align-items: unset;
+   }
+   
+   .section__video {
+       width: auto;
+       margin: 1rem 1rem 1rem 1rem;
+   }
+
+   .section__div{
+    width: auto;
+}
+
+    .section__banner{
+        margin: auto;
+    }
 
 }
 
