Se realizan ajustes visuales para usuario en 425px y 768px

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -182,7 +182,8 @@ h1{
 
     .main {
         display: grid;
-        grid-template-columns: 25% 25% 25% 25%;
+        grid-template-columns: 100%;
+        grid-template-rows: 25% 25% 25% 25%;
         grid-gap: 2px;
     }
 
@@ -193,12 +194,12 @@ h1{
     }
 
     .main__anchorimg {
-        width: 6rem;
+        width: 15rem;
     }
 
-    .main__divsubtitulo {
+    /* .main__divsubtitulo {
         font-size: small;
-    }
+    } */
 
     .section {
          flex-direction: column;
@@ -264,12 +265,13 @@ h1{
     }
 
     .div {
-        height: 200px;
+        height: 300px;
     }
 
     .main {
         display: grid;
-        grid-template-columns: 50% 50%;
+        grid-template-columns: 100%;
+        grid-template-rows: 25% 25% 25% 25%;
         grid-gap: 2px;
     }
 
@@ -280,12 +282,12 @@ h1{
     }
 
     .main__anchorimg {
-        width: 6rem;
+        width: 10rem;
     }
 
-    .main__divsubtitulo {
+    /* .main__divsubtitulo {
         font-size: x-small;
-    }
+    } */
 
     .section {
          flex-direction: column;
