--- a/css/estilos.css
+++ b/css/estilos.css
@@ -225,10 +225,12 @@ h1{
         margin-bottom: 1rem;
     }
 
+
     .footer {
         display: grid;
-        grid-template-columns: 30% 25% 25% 20%;
-        font-size: small;
+        grid-template-columns: 100%;
+        grid-template-rows: 50% 10% 10% 30%;
+        font-size: x-small;
         justify-items: center;
     }
 
