--- a/css/estilos.css
+++ b/css/estilos.css
@@ -117,10 +117,9 @@
     margin-left: 1rem;
 }
 
-.section__div{
+/* .section__div{
     width: 50%;
-    padding: 1rem 2rem 2rem 2rem;
-}
+} */
 
 h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -131,30 +130,57 @@ h1{
 .section__divparrafo{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: small;
+    text-align: center;
 
-    margin-top: 1rem;
-    margin-bottom: 2rem;
+}
+
+.section__banner{
+    height: 150px;
 }
 
 /* MEDIA QUERIES ESTILO LAPTOP*/
-@media screen and (max-width: 1024px){
 
+@media screen and (min-width: 1024px){
+
+
+    /* p{
+        display: grid;
+    } */
+ 
     .section {
-        flex-direction: column;
-        align-items: unset;
-   }
-   
+        display: grid;
+
+        grid-template-rows: 50% 50%;
+        grid-template-columns: auto 40% ;
+
+        justify-items: center;
+        column-gap: 1rem;
+
+
+    }
+
    .section__video {
+       grid-row: 1/3;
        width: auto;
-       margin: 1rem 1rem 1rem 1rem;
+       border: 1px solid red;
    }
 
-   .section__div{
-    width: auto;
-}
+
+   /* .section__div{
+    border: 1px solid red;
+
+
+    margin-right: 1rem;
+    } */
+
+    .section__divparrafo{
+        border: 1px solid red;
+        width: 15rem;
+        height: 10rem;
+    }
 
     .section__banner{
-        margin: auto;
+        border: 1px solid red;
     }
 
 }
