--- a/css/estilos.css
+++ b/css/estilos.css
@@ -46,8 +46,6 @@
     padding: 0%;
 }
 
-
-
 .footer{
     background-color: #dbc7db96;
     display: flex;
@@ -133,15 +131,28 @@ h1{
     height: 150px;
 }
 
+.navbar-nav{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-shadow: #dbc7db96;
+}
+
 /* MEDIA QUERIES ESTILO LAPTOP*/
 
 @media screen and (min-width: 1024px){
 
+    .navbar-brand{
+        margin-left: 2rem;
+    }
+    
+    .navbar-expand-lg .navbar-collapse {
+        justify-content: end;
+    }
 
-    /* p{
-        display: grid;
-    } */
- 
+    .navbar-nav{
+        font-size: large;
+    }
+    
+
     .section {
         display: grid;
 
@@ -150,22 +161,12 @@ h1{
 
         justify-items: center;
         column-gap: 1rem;
-
-
     }
 
    .section__video {
        grid-row: 1/3;
        width: auto;
    }
-
-
-   /* .section__div{
-    border: 1px solid red;
-
-
-    margin-right: 1rem;
-    } */
 
     .section__divparrafo{
         width: 15rem;
