Se agregan archivos parciales

--- a/sass/origen.scss
+++ b/sass/origen.scss
@@ -1,2 +1,14 @@
+@import "./parciales/reset";
 @import "./parciales/header";
+@import "./parciales/carousel";
+@import "./parciales/main";
+@import "./parciales/tipografias";
+@import "./parciales/sectioninfo";
+@import "./parciales/footer";
+@import "./parciales/mediaqueries";
+
+
+
+
+
 
