--- a/css/compilado.css
+++ b/css/compilado.css
@@ -3,46 +3,26 @@
   padding: 0;
   box-sizing: border-box; }
 
+.navbar {
+  --bs-navbar-color: purple; }
+
+.navbar-toggler {
+  border: 0.5px solid purple; }
+
 .navbar-nav {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
 
-.header__logo {
-  width: 200px;
-  margin-right: 20px; }
-
-.header__logocontenedor {
-  margin-left: 5rem; }
-
-.header__list {
-  display: flex;
-  list-style-type: none;
-  gap: 1rem;
-  margin-right: auto;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
-
-.header__anchor {
-  text-decoration: solid; }
-
-.header__anchor--activo {
-  font-weight: bold; }
-
-.div {
-  padding: 0%; }
+.container-fluid {
+  --bs-gutter-x: 0 ; }
 
 .main {
   display: flex; }
-
-.main__div {
-  padding-top: 4rem;
-  padding-bottom: 2rem;
-  margin: auto; }
-
-.main__anchorimg {
-  width: 10rem; }
-
-.main__divsubtitulo {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-weight: bold; }
+  .main__div {
+    padding-top: 4rem;
+    padding-bottom: 2rem;
+    margin: auto; }
+  .main__anchorimg {
+    width: 10rem; }
 
 h1 {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -54,18 +34,15 @@ h1 {
   height: auto;
   align-items: center;
   padding-bottom: 1rem; }
-
-.section__video {
-  width: 50%;
-  margin-left: 1rem; }
-
-.section__divparrafo {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: small;
-  text-align: center; }
-
-.section__banner {
-  height: 150px; }
+  .section__video {
+    width: 50%;
+    margin-left: 1rem; }
+  .section__divparrafo {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: small;
+    text-align: center; }
+  .section__banner {
+    height: 150px; }
 
 .footer {
   background-color: #dbc7db96;
@@ -76,23 +53,19 @@ h1 {
   font-style: italic;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: medium; }
-
-.footer__logocontenedor {
-  margin-left: 5rem; }
-
-.footer__logo {
-  width: 200px;
-  margin-right: 20px; }
-
-.footer__div {
-  display: flex;
-  margin-right: 2rem;
-  gap: 1rem; }
-
-.footer__imgredes {
-  width: 2rem;
-  height: 2rem;
-  object-fit: cover; }
+  .footerter__logocontenedor {
+    margin-left: 5rem; }
+  .footer__logo {
+    width: 200px;
+    margin-right: 20px; }
+  .footer__div {
+    display: flex;
+    margin-right: 2rem;
+    gap: 1rem; }
+  .footer__imgredes {
+    width: 2rem;
+    height: 2rem;
+    object-fit: cover; }
 
 /* MEDIA QUERIES ESTILO LAPTOP*/
 @media screen and (min-width: 1024px) {
@@ -108,123 +81,97 @@ h1 {
     grid-template-columns: auto 40%;
     justify-items: center;
     column-gap: 1rem; }
-  .section__video {
-    grid-row: 1/3;
-    width: auto; }
-  .section__divparrafo {
-    width: 15rem;
-    height: 10rem; }
-  .div {
-    padding: 0%; } }
+    .section__video {
+      grid-row: 1/3;
+      width: auto; }
+    .section__divparrafo {
+      width: 15rem;
+      height: 10rem; } }
 
 /* MEDIA QUERIES ESTILO TABLET*/
 @media screen and (max-width: 768px) {
-  .header {
-    flex-direction: column; }
-  .header__logocontenedor {
-    margin: auto; }
-  .header__list {
-    display: flex;
-    font-size: small; }
-  .div {
-    padding: 0%; }
   .main {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 25% 25% 25% 25%;
     grid-gap: 2px; }
-  .main__div {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    margin: auto; }
-  .main__anchorimg {
-    width: 15rem; }
-  /* .main__divsubtitulo {
-        font-size: small;
-    } */
+    .main__div {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      margin: auto; }
+    .main__anchorimg {
+      width: 15rem; }
   .section {
     flex-direction: column;
     align-items: unset; }
-  .section__video {
-    width: auto;
-    margin: 1rem; }
-  .section__div {
-    display: flex;
-    width: auto;
-    padding: 1rem 1rem 1rem 1rem;
-    overflow-x: hidden;
-    justify-content: center; }
-  .section__divparrafo {
-    text-align: center;
-    margin-top: unset;
-    margin-bottom: 1rem; }
+    .section__video {
+      width: auto;
+      margin: 1rem; }
+    .section__div {
+      display: flex;
+      width: auto;
+      padding: 1rem 1rem 1rem 1rem;
+      overflow-x: hidden;
+      justify-content: center; }
+    .section__divparrafo {
+      text-align: center;
+      margin-top: unset;
+      margin-bottom: 1rem; }
   .footer {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 50% 10% 10% 30%;
     font-size: x-small;
     justify-items: center; }
-  .footer__logocontenedor {
-    margin: unset; }
-  .footer__logo {
-    width: 150px;
-    margin: 0%; }
-  .footer__div {
-    margin-right: 0rem;
-    gap: 1rem; } }
+    .footer__logocontenedor {
+      margin: unset; }
+    .footer__logo {
+      width: 150px;
+      margin: 0%; }
+    .footer__div {
+      margin-right: 0rem;
+      gap: 1rem; } }
 
 /* MEDIA QUERIES ESTILOS MOVILES*/
 @media screen and (max-width: 425px) {
-  .header {
-    flex-direction: column; }
-  .header__logocontenedor {
-    margin: auto; }
-  .header__list {
-    display: flex;
-    font-size: xx-small; }
-  .div {
-    padding: 0%; }
   .main {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 25% 25% 25% 25%;
     grid-gap: 2px; }
-  .main__div {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    margin: auto; }
-  .main__anchorimg {
-    width: 10rem; }
-  /* .main__divsubtitulo {
-        font-size: x-small;
-    } */
+    .main__div {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      margin: auto; }
+    .main__anchorimg {
+      width: 10rem; }
   .section {
     flex-direction: column;
     align-items: unset; }
-  .section__video {
-    width: auto;
-    margin: 1rem; }
-  .section__div {
-    width: auto;
-    padding: 1rem 1rem 1rem 1rem;
-    overflow-x: hidden; }
-  .section__banner {
-    width: 350px; }
-  .section__divparrafo {
-    text-align: center;
-    margin-top: unset;
-    margin-bottom: 1rem; }
+    .section__video {
+      width: auto;
+      margin: 1rem; }
+    .section__div {
+      width: auto;
+      padding: 1rem 1rem 1rem 1rem;
+      overflow-x: hidden; }
+    .section__banner {
+      width: 350px; }
+    .section__divparrafo {
+      text-align: center;
+      margin-top: unset;
+      margin-bottom: 1rem; }
   .footer {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 50% 10% 10% 30%;
     font-size: x-small;
     justify-items: center; }
-  .footer__logocontenedor {
-    margin: unset; }
-  .footer__logo {
-    width: 150px;
-    margin: 0%; }
-  .footer__div {
-    margin-right: 0rem;
-    gap: 1rem; } }
+    .footer__logocontenedor {
+      margin: unset; }
+    .footer__logo {
+      width: 150px;
+      margin: 0%; }
+    .footer__div {
+      margin-right: 0rem;
+      gap: 1rem; } }
