--- a/sass/parciales/_footer.scss
+++ b/sass/parciales/_footer.scss
@@ -7,25 +7,27 @@
     font-style: italic;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: medium;
+    
+    &ter__logocontenedor{
+        margin-left: 5rem;
+    }
+    
+    &__logo{
+        width: 200px;
+        margin-right: 20px;
+    }
+    
+    &__div{
+        display: flex;
+        margin-right: 2rem;
+        gap:1rem;
+    }
+    
+    &__imgredes{
+        width: 2rem;
+        height: 2rem;
+        object-fit: cover;
+    }
+
 }
 
-.footer__logocontenedor{
-    margin-left: 5rem;
-}
-
-.footer__logo{
-    width: 200px;
-    margin-right: 20px;
-}
-
-.footer__div{
-    display: flex;
-    margin-right: 2rem;
-    gap:1rem;
-}
-
-.footer__imgredes{
-    width: 2rem;
-    height: 2rem;
-    object-fit: cover;
-}
