--- a/sass/parciales/_header.scss
+++ b/sass/parciales/_header.scss
@@ -1,28 +1,14 @@
+.navbar{
+    --bs-navbar-color: purple;
+
+}
+
+.navbar-toggler {
+    border: 0.5px solid purple;
+}
+
 .navbar-nav{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.header__logo{
-    width: 200px;
-    margin-right: 20px;
-}
 
-.header__logocontenedor{
-    margin-left: 5rem;
-}
-
-.header__list{
-    display: flex;
-    list-style-type: none;
-    gap: 1rem;
-    margin-right: auto;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-}
-
-.header__anchor{
-    text-decoration: solid;
-}
-
-.header__anchor--activo{   
-    font-weight: bold;
-}
