--- a/sass/parciales/_main.scss
+++ b/sass/parciales/_main.scss
@@ -1,19 +1,14 @@
 
 .main{
     display: flex;
-}
 
-.main__div{
-    padding-top: 4rem;
-    padding-bottom: 2rem;
-    margin: auto;
-}
-.main__anchorimg{
-
-    width: 10rem;
-}
-
-.main__divsubtitulo{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold ;
+    &__div{
+        padding-top: 4rem;
+        padding-bottom: 2rem;
+        margin: auto;
+    }
+    
+    &__anchorimg{
+        width: 10rem;
+    }
 }
