--- a/sass/parciales/_mediaqueries.scss
+++ b/sass/parciales/_mediaqueries.scss
@@ -23,20 +23,17 @@
 
         justify-items: center;
         column-gap: 1rem;
-    }
 
-   .section__video {
-       grid-row: 1/3;
-       width: auto;
-   }
+        
+        &__video {
+            grid-row: 1/3;
+            width: auto;
+            }
 
-    .section__divparrafo{
-        width: 15rem;
-        height: 10rem;
-    }
-
-    .div{
-        padding: 0%;
+        &__divparrafo{
+                width: 15rem;
+                height: 10rem;
+            }
     }
 
 }
@@ -45,180 +42,139 @@
 
 @media screen and (max-width: 768px){
 
-    .header{
-        flex-direction: column;
-    }  
-
-    .header__logocontenedor {
-        margin: auto;
-    }
-
-    .header__list {
-        display: flex;
-        font-size: small;
-    }
-
-    .div{
-        padding: 0%;
-    }
-
     .main {
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: 25% 25% 25% 25%;
         grid-gap: 2px;
-    }
 
-    .main__div {
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        margin: auto;
-    }
+        &__div{
+            padding-top: 1rem;
+            padding-bottom: 1rem;
+            margin: auto; 
+        }
 
-    .main__anchorimg {
-        width: 15rem;
+        &__anchorimg {
+                width: 15rem;
+        }
     }
-
-    /* .main__divsubtitulo {
-        font-size: small;
-    } */
 
     .section {
          flex-direction: column;
          align-items: unset;
+
+        &__video {
+            width: auto;
+            margin: 1rem;
+        }
+    
+        &__div {
+            display: flex;
+            width: auto;
+            padding: 1rem 1rem 1rem 1rem;
+            overflow-x: hidden;
+            justify-content: center;
+        }
+    
+        &__divparrafo {
+            text-align: center;
+            margin-top: unset;
+            margin-bottom: 1rem;
+        }
     }
     
-    .section__video {
-        width: auto;
-        margin: 1rem;
-    }
-
-    .section__div {
-        display: flex;
-        width: auto;
-        padding: 1rem 1rem 1rem 1rem;
-        overflow-x: hidden;
-        justify-content: center;
-    }
-
-    .section__divparrafo {
-        text-align: center;
-        margin-top: unset;
-        margin-bottom: 1rem;
-    }
-
-
     .footer {
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: 50% 10% 10% 30%;
         font-size: x-small;
         justify-items: center;
+
+        &__logocontenedor{
+            margin: unset;
+        }
+    
+        &__logo {
+            width: 150px;
+            margin: 0%;
+        }
+    
+        &__div {
+            margin-right: 0rem;
+            gap: 1rem;
+        }
     }
 
-    .footer__logocontenedor{
-        margin: unset;
-    }
-
-    .footer__logo {
-        width: 150px;
-        margin: 0%;
-    }
-
-    .footer__div {
-        margin-right: 0rem;
-        gap: 1rem;
-    }
 }
 
 /* MEDIA QUERIES ESTILOS MOVILES*/
 
 @media screen and (max-width: 425px){
 
-    .header{
-        flex-direction: column;
-    }  
-
-    .header__logocontenedor {
-        margin: auto;
-    }
-
-    .header__list {
-        display: flex;
-        font-size: xx-small;
-    }
-
-    .div{
-    padding: 0%;
-    }
-
     .main {
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: 25% 25% 25% 25%;
         grid-gap: 2px;
-    }
 
-    .main__div {
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        margin: auto;
-    }
+        &__div {
+            padding-top: 1rem;
+            padding-bottom: 1rem;
+            margin: auto;
+        }
 
-    .main__anchorimg {
-        width: 10rem;
+        &__anchorimg {
+            width: 10rem;
+        }
     }
-
-    /* .main__divsubtitulo {
-        font-size: x-small;
-    } */
 
     .section {
          flex-direction: column;
          align-items: unset;
+
+        &__video {
+            width: auto;
+            margin: 1rem;
+        }
+
+        &__div {
+            width: auto;
+            padding: 1rem 1rem 1rem 1rem;
+            overflow-x: hidden;
+        }
+
+        &__banner{
+            width: 350px;
+        }
+
+
+        &__divparrafo {
+            text-align: center;
+            margin-top: unset;
+            margin-bottom: 1rem;
+        }
     }
     
-    .section__video {
-        width: auto;
-        margin: 1rem;
-    }
 
-    .section__div {
-        width: auto;
-        padding: 1rem 1rem 1rem 1rem;
-        overflow-x: hidden;
-    }
-
-    .section__banner{
-        width: 350px;
-    }
-
-
-    .section__divparrafo {
-        text-align: center;
-        margin-top: unset;
-        margin-bottom: 1rem;
-    }
-
-    .footer {
+    .footer{
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: 50% 10% 10% 30%;
         font-size: x-small;
         justify-items: center;
-    }
 
-    .footer__logocontenedor{
-        margin: unset;
-    }
+        &__logocontenedor{
+            margin: unset;
+        }
 
-    .footer__logo {
-        width: 150px;
-        margin: 0%;
-    }
+        &__logo {
+            width: 150px;
+            margin: 0%;
+        }
 
-    .footer__div {
-        margin-right: 0rem;
-        gap: 1rem;
+        &__div {
+            margin-right: 0rem;
+            gap: 1rem;
+        }
     }
 }
