--- a/sass/parciales/_footer.scss
+++ b/sass/parciales/_footer.scss
@@ -1,5 +1,5 @@
 .footer{
-    background-color: #dbc7db96;
+    background-color: $colorfooter;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
