--- a/sass/parciales/_header.scss
+++ b/sass/parciales/_header.scss
@@ -1,14 +1,11 @@
-.navbar{
-    --bs-navbar-color: purple;
-
-}
 
 .navbar-toggler {
-    border: 0.5px solid purple;
+    border: 0.5px solid purple ;
 }
 
 .navbar-nav{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    --bs-nav-link-color: purple;
 }
 
 
