--- a/css/compilado.css
+++ b/css/compilado.css
@@ -38,9 +38,10 @@ h1 {
   .section__divparrafo {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: small;
-    text-align: center; }
+    text-align: center;
+    margin: 0.5rem; }
   .section__banner {
-    height: 150px; }
+    height: 130px; }
 
 .footer {
   background-color: #dbc7db96;
@@ -76,15 +77,16 @@ h1 {
   .section {
     display: grid;
     grid-template-rows: 50% 50%;
-    grid-template-columns: auto 40%;
-    justify-items: center;
+    margin-right: 1rem;
     column-gap: 1rem; }
     .section__video {
       grid-row: 1/3;
       width: auto; }
     .section__divparrafo {
-      width: 15rem;
-      height: 10rem; } }
+      grid-row: 2/1;
+      text-align: left; }
+    .section__banner {
+      grid-row: 2/2; } }
 
 /* MEDIA QUERIES ESTILO TABLET*/
 @media screen and (max-width: 768px) {
@@ -101,7 +103,7 @@ h1 {
       width: 15rem; }
   .section {
     flex-direction: column;
-    align-items: unset; }
+    align-items: center; }
     .section__video {
       width: auto;
       margin: 1rem; }
@@ -125,7 +127,7 @@ h1 {
       margin: unset; }
     .footer__logo {
       width: 150px;
-      margin: 0%; }
+      margin: 0; }
     .footer__div {
       margin-right: 0rem;
       gap: 1rem; } }
@@ -154,11 +156,10 @@ h1 {
       padding: 1rem 1rem 1rem 1rem;
       overflow-x: hidden; }
     .section__banner {
-      width: 350px; }
+      width: 250px; }
     .section__divparrafo {
       text-align: center;
-      margin-top: unset;
-      margin-bottom: 1rem; }
+      margin: 1rem; }
   .footer {
     display: grid;
     grid-template-columns: 100%;
@@ -169,7 +170,7 @@ h1 {
       margin: unset; }
     .footer__logo {
       width: 150px;
-      margin: 0%; }
+      margin: 0; }
     .footer__div {
-      margin-right: 0rem;
+      margin-right: 0;
       gap: 1rem; } }
