--- a/sass/parciales/_sectioninfo.scss
+++ b/sass/parciales/_sectioninfo.scss
@@ -14,10 +14,11 @@
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         font-size: small;
         text-align: center;
+        margin: 0.5rem;
     }
 
     &__banner{
-        height: 150px;
+        height: 130px;
     }
 }
 
