--- a/sass/parciales/_mediaqueries.scss
+++ b/sass/parciales/_mediaqueries.scss
@@ -33,6 +33,7 @@
         &__divparrafo{
             grid-row: 2/1;
             text-align: left;
+            font-size: large;
             }
 
         &__banner{
