--- a/sass/parciales/_header.scss
+++ b/sass/parciales/_header.scss
@@ -1,11 +1,17 @@
 
 .navbar-toggler {
     border: 0.5px solid purple ;
+    margin-right: 1rem;
 }
 
 .navbar-nav{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     --bs-nav-link-color: purple;
+    margin-left: 1rem;
+}
+
+.navbar{
+    --bs-navbar-padding-y: $nulo,
 }
 
 
