--- a/sass/parciales/_mediaqueries.scss
+++ b/sass/parciales/_mediaqueries.scss
@@ -1,6 +1,6 @@
-/* MEDIA QUERIES ESTILO LAPTOP*/
+/* MEDIA QUERIES ESTILO PANTALLAS MAS AMPLIAS*/
 
-@media screen and (min-width: 1024px){
+@media screen and (min-width: 1440px){
 
     .navbar-brand{
         margin-left: 2rem;
@@ -8,10 +8,63 @@
     
     .navbar-expand-lg .navbar-collapse {
         justify-content: end;
+        margin-right: 1rem;
     }
 
     .navbar-nav{
         font-size: large;
+    }
+
+    .main__anchorimg{
+            width: 35rem;
+    }
+
+    .section {
+        display: grid;
+
+        grid-template-rows: 50% 50%;
+
+        margin-right: 1rem;
+        margin-top: 1rem;
+        margin-bottom: 2rem;
+
+        column-gap: 1rem;
+
+        
+        &__video {
+            grid-row: 1/3;
+            width: auto;
+            }
+
+        &__divparrafo{
+            grid-row: 2/1;
+            text-align: justify;
+            font-size: large;
+            }
+
+        &__banner{
+             grid-row: 2/2;
+             margin-left: 1rem;
+            }
+    }
+
+}
+
+/* MEDIA QUERIES ESTILO LAPTOP*/
+
+@media screen and (max-width: 1024px){
+
+    .navbar-brand{
+        margin-left: 2rem;
+    }
+    
+    .navbar-expand-lg .navbar-collapse {
+        justify-content: end;
+        margin-right: 1rem;
+    }
+
+    .navbar-nav{
+        font-size: small;
     }
     
 
@@ -32,12 +85,13 @@
 
         &__divparrafo{
             grid-row: 2/1;
-            text-align: left;
-            font-size: large;
+            text-align: justify;
+            font-size: small;
             }
 
         &__banner{
              grid-row: 2/2;
+             margin-left: 1rem;
             }
     }
 
@@ -105,7 +159,7 @@
         }
     
         &__div {
-            margin-right: 0rem;
+            margin-right: $nulo;
             gap: 1rem;
         }
     }
