--- a/css/compilado.css
+++ b/css/compilado.css
@@ -82,7 +82,8 @@ h1 {
     font-size: medium; }
   .main {
     display: grid;
-    grid-template-columns: 33% 33% 33%; }
+    grid-template-columns: 33% 34% 33%;
+    justify-items: center; }
     .main__anchorimg {
       width: 30rem; }
   .section {
@@ -112,13 +113,14 @@ h1 {
     font-size: small; }
   .main {
     display: grid;
-    grid-template-columns: 33% 33% 33%; }
+    grid-template-columns: 33% 34% 33%;
+    justify-items: center; }
     .main__anchorimg {
       width: 20rem; }
   .section {
     display: grid;
     grid-template-rows: 50% 50%;
-    column-gap: 1rem;
+    column-gap: 0.5rem;
     margin: 1rem; }
     .section__video {
       grid-row: 1/3;
@@ -136,8 +138,7 @@ h1 {
   .main {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 33% 33% 33%;
-    grid-gap: 1px; }
+    grid-template-rows: 33% 33% 33%; }
     .main__div {
       padding-top: 1rem;
       padding-bottom: 1rem;
