--- a/sass/parciales/_mediaqueries.scss
+++ b/sass/parciales/_mediaqueries.scss
@@ -17,7 +17,9 @@
     
     .main {
         display: grid;
-        grid-template-columns: 33% 33% 33%;
+        grid-template-columns: 33% 34% 33%;
+        justify-items: center;
+
 
         &__anchorimg{
              width: 30rem;
@@ -52,7 +54,6 @@
 
 }
 
-
 /* MEDIA QUERIES ESTILO LAPTOP*/
 
 @media screen and (max-width: 1024px){
@@ -72,7 +73,8 @@
     
     .main {
         display: grid;
-        grid-template-columns: 33% 33% 33%;
+        grid-template-columns: 33% 34% 33%;
+        justify-items: center;
 
         &__anchorimg{
              width: 20rem;
@@ -84,7 +86,7 @@
 
         grid-template-rows: 50% 50%;
 
-        column-gap: 1rem;
+        column-gap: 0.5rem;
         margin: 1rem;
 
         
@@ -115,7 +117,6 @@
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: 33% 33% 33%;
-        grid-gap: 1px;
 
         &__div{
             padding-top: 1rem;
