--- a/css/compilado.css
+++ b/css/compilado.css
@@ -83,7 +83,8 @@ h1 {
   .main {
     display: grid;
     grid-template-columns: 33% 34% 33%;
-    justify-items: center; }
+    justify-items: center;
+    margin-top: 1rem; }
     .main__anchorimg {
       width: 30rem; }
   .section {
@@ -97,7 +98,7 @@ h1 {
     .section__divparrafo {
       grid-row: 2/1;
       text-align: justify;
-      font-size: medium; }
+      font-size: large; }
     .section__banner {
       grid-row: 2/2;
       margin-left: 1rem; } }
@@ -114,7 +115,8 @@ h1 {
   .main {
     display: grid;
     grid-template-columns: 33% 34% 33%;
-    justify-items: center; }
+    justify-items: center;
+    margin-top: 1rem; }
     .main__anchorimg {
       width: 20rem; }
   .section {
@@ -184,9 +186,9 @@ h1 {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 30% 30% 30% 10%;
-    justify-items: center; }
+    justify-items: center;
+    margin-top: 0; }
     .main__div {
-      padding-top: 1rem;
       padding-bottom: 1rem; }
     .main__anchorimg {
       width: 20rem; }
@@ -194,7 +196,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-right: 0; }
+    margin: 0; }
     .section__video {
       width: 95%; }
     .section__divparrafo {
