--- a/sass/parciales/_mediaqueries.scss
+++ b/sass/parciales/_mediaqueries.scss
@@ -19,6 +19,7 @@
         display: grid;
         grid-template-columns: 33% 34% 33%;
         justify-items: center;
+        margin-top: 1rem;
 
 
         &__anchorimg{
@@ -43,7 +44,7 @@
         &__divparrafo{
             grid-row: 2/1;
             text-align: justify;
-            font-size: medium;
+            font-size: large;
             }
 
         &__banner{
@@ -75,6 +76,7 @@
         display: grid;
         grid-template-columns: 33% 34% 33%;
         justify-items: center;
+        margin-top: 1rem;
 
         &__anchorimg{
              width: 20rem;
@@ -188,9 +190,9 @@
         grid-template-columns: 100%;
         grid-template-rows: 30% 30% 30% 10%;
         justify-items: center;
+        margin-top: $nulo;
 
         &__div {
-            padding-top: 1rem;
             padding-bottom: 1rem;
         }
 
@@ -203,7 +205,7 @@
          display: flex;
          flex-direction: column;
          align-items: center;
-         margin-right: $nulo;
+         margin: $nulo;
 
         &__video {
             width: 95%;
