Se comienzan cambias en la seccion de productos

--- a/sass/origen.scss
+++ b/sass/origen.scss
@@ -4,6 +4,7 @@ $colorfooter: #dbc7db96;
 @import "./parciales/reset";
 @import "./parciales/header";
 @import "./parciales/carousel";
+@import "./parciales/card";
 @import "./parciales/main";
 @import "./parciales/tipografias";
 @import "./parciales/sectioninfo";
