--- a/css/compilado.css
+++ b/css/compilado.css
@@ -22,6 +22,19 @@
 .container-fluid {
   --bs-gutter-x: $nulo ; }
 
+.card {
+  --bs-card-spacer-y: 0.5rem;
+  --bs-card-border-color: purple;
+  margin-top: 2rem;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
+
+.btn-primary {
+  --bs-btn-bg: purple;
+  --bs-btn-border-color: white; }
+
+.btn {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
+
 .main {
   display: flex; }
   .main__anchorimg {
@@ -55,7 +68,8 @@ h1 {
   align-items: center;
   font-style: italic;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: medium; }
+  font-size: medium;
+  margin-top: 0.5rem; }
   .footerter__logocontenedor {
     margin-left: 5rem; }
   .footer__logo {
@@ -87,6 +101,8 @@ h1 {
     margin-top: 1rem; }
     .main__anchorimg {
       width: 30rem; }
+  .card__imagen {
+    width: 18rem; }
   .section {
     display: grid;
     grid-template-rows: 50% 50%;
@@ -119,6 +135,8 @@ h1 {
     margin-top: 1rem; }
     .main__anchorimg {
       width: 20rem; }
+  .card__imagen {
+    width: 18rem; }
   .section {
     display: grid;
     grid-template-rows: 50% 50%;
@@ -147,6 +165,8 @@ h1 {
       margin: auto; }
     .main__anchorimg {
       width: 30rem; }
+  .card__imagen {
+    width: 15rem; }
   .section {
     display: flex;
     flex-direction: column;
@@ -192,6 +212,8 @@ h1 {
       padding-bottom: 1rem; }
     .main__anchorimg {
       width: 20rem; }
+  .card__imagen {
+    width: 10rem; }
   .section {
     display: flex;
     flex-direction: column;
