--- a/sass/parciales/_footer.scss
+++ b/sass/parciales/_footer.scss
@@ -7,6 +7,7 @@
     font-style: italic;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: medium;
+    margin-top: 0.5rem;
     
     &ter__logocontenedor{
         margin-left: 5rem;
