--- a/sass/origen.scss
+++ b/sass/origen.scss
@@ -5,6 +5,7 @@ $colorfooter: #dbc7db96;
 @import "./parciales/header";
 @import "./parciales/carousel";
 @import "./parciales/card";
+@import "./parciales/formulario";
 @import "./parciales/main";
 @import "./parciales/tipografias";
 @import "./parciales/sectioninfo";
